# SiligenPlatform

./: .coveragerc  .gitattributes  .gitignore  .importlinter  AGENTS.md  CHANGELOG.md  CMakeLists.txt  DXF_full_analysis_compare.md  README.md  WORKSPACE.md  build.ps1  ci.ps1  legacy-exit-check.ps1  pyrightconfig.json  release-check.ps1  test.ps1  整体重构方案（修订版）.md  重构.md  阶段0-基线盘点.md  阶段0-迁移映射.md
apps/: CMakeLists.txt  README.md
apps/control-cli/: CMakeLists.txt  CommandHandlers.Dxf.cpp  CommandHandlers.Motion.cpp  CommandHandlers.Recipe.cpp  CommandHandlers.cpp  CommandHandlers.h  CommandHandlersInternal.h  CommandLineParser.cpp  CommandLineParser.h  README.md  main.cpp  run.ps1
apps/control-runtime/: CMakeLists.txt  README.md  main.cpp  run.ps1
apps/control-tcp-server/: CMakeLists.txt  README.md  main.cpp  run.ps1
apps/hmi-app/: COMPATIBILITY.md  DEPENDENCY_AUDIT.md  README.md  pyproject.toml  run.ps1
apps/planner-cli/: CMakeLists.txt  CommandHandlers.Connection.cpp  CommandHandlers.Dispensing.cpp  CommandHandlers.Dxf.cpp  CommandHandlers.Motion.cpp  CommandHandlers.Recipe.cpp  CommandHandlers.cpp  CommandHandlers.h  CommandHandlersInternal.h  CommandLineParser.cpp  CommandLineParser.h  README.md  main.cpp  run.ps1
apps/runtime-gateway/: CMakeLists.txt  README.md  main.cpp  run.ps1
apps/runtime-service/: CMakeLists.txt  README.md  main.cpp  run.ps1
apps/trace-viewer/: README.md
control-core/: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  COMMIT_CONVENTIONS.md  CONTRIBUTING.md  PROJECT_BOUNDARY_RULES.md  README.md
control-core/.github/: PULL_REQUEST_TEMPLATE.md
control-core/apps/: CMakeLists.txt
control-core/cmake/: vcpkg-toolchain.cmake
control-core/docs/: CLAUDE.md  DEVELOPMENT_CONVENTIONS.md  DXF_DOC_BOUNDARY.md  EDITOR_DOC_BOUNDARY.md  MIGRATION_STATUS.md  PROTO_OWNERSHIP.md  README.md  TESTING_CONVENTIONS.md  dxf-pipeline-migration-plan.md
control-core/examples/: CMakeLists.txt  README.md
control-core/modules/: CMakeLists.txt
control-core/scripts/: build.ps1  check-naming-convention.ps1  convert_dxf_to_r12.py  dxf_preprocess_r12.py  fix_dxf_handles.py  generate_error_codes.py  init_environment.ps1  package.ps1  test.ps1
control-core/src/: CMakeLists.txt
control-core/tests/: CMakeLists.txt  README.md
dxf-pipeline/: .editorconfig  .gitignore  CHANGELOG.md  COMMIT_CONVENTIONS.md  CONTRIBUTING.md  PROJECT_BOUNDARY_RULES.md  README.md  dxf-pipeline-migration-instructions.md  pyproject.toml  requirements.txt
dxf-pipeline/docs/: DEVELOPMENT_CONVENTIONS.md  DXF_IMPORT_ASSUMPTIONS.md  TESTING_CONVENTIONS.md
dxf-pipeline/examples/: rect_diag.simulation-input.json
dxf-pipeline/scripts/: README.md  benchmark.ps1  convert_dxf_to_r12.py  dxf_glue_spacing_optimize.py  generate_proto.ps1  run.ps1  test.ps1  test_migration.py
modules/: CMakeLists.txt  MODULES_BUSINESS_FILE_TREE_AND_TABLES.md  README.md
modules/coordinate-alignment/: CMakeLists.txt  README.md  module.yaml
modules/dispense-packaging/: CMakeLists.txt  LIVE_OWNER_BOUNDARY_INVENTORY.md  README.md  module.yaml
modules/dxf-geometry/: CMakeLists.txt  README.md  module.yaml
modules/hmi-application/: CMakeLists.txt  README.md  module.yaml
modules/job-ingest/: CMakeLists.txt  README.md  module.yaml
modules/motion-planning/: CMakeLists.txt  README.md  module.yaml
modules/process-path/: CMakeLists.txt  README.md  module.yaml
modules/process-planning/: CMakeLists.txt  README.md  module.yaml
modules/recipe-lifecycle/: CMakeLists.txt  README.md  module.yaml
modules/runtime-execution/: CMakeLists.txt  README.md  module.yaml
modules/topology-feature/: CMakeLists.txt  README.md  module.yaml
modules/trace-diagnostics/: CMakeLists.txt  README.md  module.yaml
modules/workflow/: CMakeLists.txt  README.md  S2A_OWNER_MIGRATION_BASELINE.md  WORKFLOW_RESIDUE_LEDGER.md  module.yaml
shared/: CMakeLists.txt  README.md
shared/artifacts/: README.md
shared/contracts/: CMakeLists.txt  README.md
shared/ids/: README.md
shared/kernel/: CMakeLists.txt  README.md
shared/logging/: README.md
shared/messaging/: README.md
shared/testing/: CMakeLists.txt  README.md
tests/: CMakeLists.txt
tests/baselines/: README.md  arc_circle_quadrants.simulation-baseline.json  baseline-manifest.json  baseline-manifest.schema.json  bra.simulation-baseline.json  invalid_empty_segments.scheme_c.recording-baseline.json  rect_diag.scheme_c.recording-baseline.json  sample_trajectory.scheme_c.recording-baseline.json
tests/contracts/: test_bridge_exit_contract.py  test_control_apps_build_contract.py  test_controlled_runner_positional_binding_contract.py  test_current_chain_validation_contract.py  test_dxf_geometry_parser_target_closeout.py  test_dxf_truth_matrix_runner_contract.py  test_engineering_contracts.py  test_engineering_data_compatibility.py  test_fault_scenario_contract.py  test_first_layer_tcp_bootstrap_contract.py  test_freeze_docset_contract.py  test_gate_orchestrator_contract.py  test_gateway_resolution_consumer_contract.py  test_hil_existing_gateway_reuse_contract.py  test_hil_offline_admission_provenance_contract.py  test_job_ingest_semantic_freeze_contract.py  test_layered_validation_contract.py  test_layered_validation_lane_policy_contract.py  test_machine_residual_exit_contract.py  test_migration_alignment_matrix.py  test_module_boundary_audit_contract.py  test_online_preview_evidence_contract.py  test_online_test_matrix_runner_contract.py  test_performance_threshold_gate_contract.py  test_process_path_legacy_compat_contract.py  test_protocol_compatibility.py  test_recipe_lifecycle_public_surface_contract.py  test_refactor_guard_fallback_contract.py  test_runtime_gateway_harness_resolution_contract.py  test_runtime_gateway_harness_tcp_client_contract.py  test_shared_test_assets_contract.py  test_strict_runner_gate_contract.py  test_trace_diagnostics_public_surface_contract.py  test_validation_evidence_bundle_contract.py
tests/e2e/: README.md
tests/integration/: README.md
tests/performance/: README.md  collect_baselines.py  (+3 more)
(+3863 files in other folders)
